--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
 dependencies {
     def room_version = "1.1.1"
     def picasso_version = "2.71828"
+    def volley_version = "1.1.1"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -32,6 +33,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.squareup.picasso:picasso:$picasso_version"
+    implementation "com.android.volley:volley:$volley_version"
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
     testImplementation 'junit:junit:4.12'
