--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,19 +29,24 @@ dependencies {
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-
+    //design
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'com.android.support:design:28.0.0'
+    //network
     implementation "com.squareup.picasso:picasso:$picasso_version"
     implementation "com.android.volley:volley:$volley_version"
 
     implementation 'android.arch.lifecycle:extensions:1.1.1'
-    implementation 'com.android.support:design:28.0.0'
+
     implementation 'com.android.support:support-v4:28.0.0'
+    //test
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation 'org.mockito:mockito-core:1.10.19'
+    //data
     implementation "android.arch.persistence.room:runtime:$room_version"
     kapt "android.arch.persistence.room:compiler:$room_version"
 }
